tests/resource/valid/operation/assign_types_nested.mamba
class X(def a: Float)

def x := X(10)

x.a += 2
x.a -= 3
x.a *= 6

x.a /= 7
x.a ^= 2

x.a <<= 10
x.a >>= 5
